###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

module(
    name = "psi",
    version = "0.6.0.dev250123",
    compatibility_level = 1,
)

bazel_dep(name = "yacl", version = "0.4.5b10-nightly-20241224")

single_version_override(
    module_name = "grpc",
    patch_strip = 1,
    patches = [
        "//bazel/patches:grpc-1.66.patch",
        "//bazel/patches:grpc-module-file.patch",
    ],
    version = "1.66.0.bcr.3",
)

bazel_dep(name = "platforms", version = "0.0.8")
bazel_dep(name = "apple_support", version = "1.17.1")
bazel_dep(name = "rules_cc", version = "0.0.13")
bazel_dep(name = "rules_proto", version = "6.0.0.bcr.1")
bazel_dep(name = "rules_foreign_cc", version = "0.12.0")
bazel_dep(name = "protobuf", version = "27.3")
bazel_dep(name = "spdlog", version = "1.14.1")
bazel_dep(name = "fmt", version = "11.0.2")
bazel_dep(name = "abseil-cpp", version = "20240722.0")
bazel_dep(name = "gflags", version = "2.2.2")
bazel_dep(name = "rapidjson", version = "1.1.0.bcr.20241007")
bazel_dep(name = "boost.math", version = "1.83.0")
bazel_dep(name = "boost.algorithm", version = "1.83.0.bcr.1")
bazel_dep(name = "boost.multiprecision", version = "1.83.0")
bazel_dep(name = "zlib", version = "1.3.1.bcr.3")

# self-host registry
bazel_dep(name = "openssl", version = "3.3.2.bcr.1")
bazel_dep(name = "org_interconnection", version = "0.0.1")
bazel_dep(name = "fourqlib", version = "0.0.0-20220901-1031567")
bazel_dep(name = "arrow", version = "10.0.0", repo_name = "org_apache_arrow")
bazel_dep(name = "ippcp", version = "2021.8")
bazel_dep(name = "libdivide", version = "5.0")
bazel_dep(name = "emp-tool", version = "0.2.5")
bazel_dep(name = "sparsehash", version = "2.0.4")
bazel_dep(name = "sse2neon", version = "1.7.0-20240330-8df2f48")
bazel_dep(name = "zstd", version = "1.5.6")
bazel_dep(name = "gsl", version = "4.0.0")
bazel_dep(name = "log4cplus", version = "2.1.1")
bazel_dep(name = "seal", version = "4.1.1")

# non mododule dependencies
non_module_dependencies = use_extension("//bazel:defs.bzl", "non_module_dependencies")
use_repo(
    non_module_dependencies,
    "apsi",
    "curve25519-donna",
    "kuku",
    "perfetto",
)

new_local_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:local.bzl", "new_local_repository")

new_local_repository(
    name = "macos_omp_x64",
    build_file = "@yacl//bazel:local_openmp_macos.BUILD",
    path = "/usr/local/opt/libomp",
)

new_local_repository(
    name = "macos_omp_arm64",
    build_file = "@yacl//bazel:local_openmp_macos.BUILD",
    path = "/opt/homebrew/opt/libomp/",
)

# test
bazel_dep(name = "googletest", version = "1.15.2", dev_dependency = True, repo_name = "com_google_googletest")
bazel_dep(name = "google_benchmark", version = "1.8.5", dev_dependency = True, repo_name = "com_github_google_benchmark")
