# Copyright 2021 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//bazel:psi.bzl", "psi_cc_binary", "psi_cc_library")

package(default_visibility = ["//visibility:public"])

psi_cc_library(
    name = "utils",
    srcs = ["utils.cc"],
    hdrs = ["utils.h"],
    deps = [
        "@com_github_gflags_gflags//:gflags",
        "@com_google_absl//absl/strings",
        "@yacl//yacl/link:factory",
    ],
)

psi_cc_binary(
    name = "simple_in_memory_psi",
    srcs = ["simple_in_memory_psi.cc"],
    deps = [
        ":utils",
        "@psi//psi/psi/core:ecdh_psi",
    ],
)

psi_cc_binary(
    name = "simple_psi",
    srcs = ["simple_psi.cc"],
    data = [
        "//examples/data:psi",
    ],
    deps = [
        ":utils",
        "@psi//psi/psi:bucket_psi",
    ],
)

psi_cc_binary(
    name = "simple_dp_psi",
    srcs = ["simple_dp_psi.cc"],
    data = [
        "//examples/data:psi",
    ],
    deps = [
        ":utils",
        "@psi//psi/psi/core/dp_psi",
    ],
)
