# Copyright 2023 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//bazel:psi.bzl", "psi_cc_library")

package(default_visibility = ["//visibility:public"])

psi_cc_library(
    name = "prelude",
    hdrs = [
        "prelude.h",
    ],
    deps = [
        "//psi/checkpoint:checkpoint_cc_proto",
        "//psi/proto:psi_cc_proto",
        "//psi/proto:psi_v2_cc_proto",
    ],
)

psi_cc_library(
    name = "interface",
    srcs = ["interface.cc"],
    hdrs = ["interface.h"],
    deps = [
        ":prelude",
        ":trace_categories",
        "//psi/checkpoint:recovery",
        "//psi/proto:psi_v2_cc_proto",
        "//psi/utils:bucket",
        "//psi/utils:index_store",
        "//psi/utils:join_processor",
        "//psi/utils:resource_manager",
        "//psi/utils:table_utils",
        "@abseil-cpp//absl/status",
        "@perfetto",
        "@yacl//yacl/link",
    ],
)

psi_cc_library(
    name = "trace_categories",
    srcs = ["trace_categories.cc"],
    hdrs = ["trace_categories.h"],
    deps = [
        "@perfetto",
    ],
)

psi_cc_library(
    name = "version",
    hdrs = ["version.h"],
)
