# Copyright 2021 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//bazel:psi.bzl", "psi_cc_binary")

package(default_visibility = ["//visibility:public"])

psi_cc_binary(
    name = "generate_pir_data",
    srcs = ["generate_pir_data.cc"],
    deps = [
        "@com_github_gflags_gflags//:gflags",
        "@com_google_absl//absl/strings",
        "@yacl//yacl/crypto/rand",
    ],
)
