# Copyright 2022 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//bazel:psi.bzl", "psi_cc_binary", "psi_cc_library", "psi_cc_test")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_cc//cc:defs.bzl", "cc_proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "serializable_proto",
    srcs = ["serializable.proto"],
)

cc_proto_library(
    name = "serializable_cc_proto",
    deps = [":serializable_proto"],
)

psi_cc_library(
    name = "padding",
    srcs = ["padding.cc"],
    hdrs = ["padding.h"],
    deps = [
        "@yacl//yacl/base:byte_container_view",
        "@yacl//yacl/base:exception",
    ],
)

psi_cc_library(
    name = "package",
    srcs = ["package.cc"],
    hdrs = ["package.h"],
    deps = [
        "@com_github_microsoft_apsi//:apsi",
        "@yacl//yacl/base:exception",
    ],
)

psi_cc_library(
    name = "psi_params",
    srcs = ["psi_params.cc"],
    hdrs = ["psi_params.h"],
    deps = [
        ":serializable_cc_proto",
        "@com_github_microsoft_apsi//:apsi",
        "@yacl//yacl/base:exception",
        "@yacl//yacl/link",
    ],
)

psi_cc_library(
    name = "serialize",
    hdrs = ["serialize.h"],
    deps = [
        ":serializable_cc_proto",
        "@com_github_microsoft_apsi//:apsi",
    ],
)

psi_cc_library(
    name = "sender_db",
    srcs = ["sender_db.cc"],
    hdrs = ["sender_db.h"],
    deps = [
        ":serialize",
        "//psi/ecdh:ecdh_oprf_selector",
        "//psi/utils:arrow_csv_batch_provider",
        "@yacl//yacl/base:byte_container_view",
        "@yacl//yacl/base:exception",
        "@yacl//yacl/io/kv:leveldb_kvstore",
        "@yacl//yacl/io/kv:memory_kvstore",
    ],
)

psi_cc_library(
    name = "sender_kvdb",
    srcs = ["sender_kvdb.cc"],
    hdrs = ["sender_kvdb.h"],
    deps = [
        ":padding",
        ":sender_db",
    ],
)

psi_cc_library(
    name = "sender_memdb",
    srcs = ["sender_memdb.cc"],
    hdrs = ["sender_memdb.h"],
    deps = [
        ":padding",
        ":sender_db",
    ],
)

psi_cc_library(
    name = "receiver",
    srcs = ["receiver.cc"],
    hdrs = ["receiver.h"],
    deps = [
        ":package",
        ":padding",
        ":psi_params",
        "//psi/ecdh:ecdh_oprf_selector",
    ],
)

psi_cc_library(
    name = "sender",
    srcs = ["sender.cc"],
    hdrs = ["sender.h"],
    deps = [
        ":package",
        ":psi_params",
        ":sender_kvdb",
        ":sender_memdb",
        "@yacl//yacl/link",
    ],
)

psi_cc_test(
    name = "apsi_test",
    srcs = [
        "apsi_test.cc",
    ],
    deps = [
        ":receiver",
        ":sender",
        "@com_google_absl//absl/strings",
        "@yacl//yacl/crypto/tools:prg",
        "@yacl//yacl/utils:scope_guard",
    ],
)

psi_cc_test(
    name = "apsi_label_test",
    srcs = [
        "apsi_label_test.cc",
    ],
    deps = [
        ":receiver",
        ":sender",
        "@com_google_absl//absl/strings",
        "@yacl//yacl/crypto/tools:prg",
        "@yacl//yacl/utils:scope_guard",
    ],
)

psi_cc_test(
    name = "kv_test",
    srcs = [
        "kv_test.cc",
    ],
    deps = [
        ":receiver",
        ":sender",
        "//psi/utils:sync",
        "@com_google_absl//absl/strings",
        "@yacl//yacl/crypto/tools:prg",
        "@yacl//yacl/utils:scope_guard",
    ],
)

psi_cc_binary(
    name = "apsi_benchmark",
    srcs = [
        "apsi_benchmark.cc",
    ],
    deps = [
        ":receiver",
        ":sender",
        "@com_github_google_benchmark//:benchmark_main",
        "@com_google_absl//absl/strings",
        "@com_google_googletest//:gtest",
        "@yacl//yacl/crypto/tools:prg",
    ],
)

psi_cc_library(
    name = "pir",
    srcs = ["pir.cc"],
    hdrs = ["pir.h"],
    deps = [
        ":receiver",
        ":sender",
        "//psi:prelude",
        "//psi/proto:pir_cc_proto",
        "//psi/utils:serialize",
        "//psi/utils:sync",
        "@yacl//yacl/crypto/base/block_cipher:symmetric_crypto",
    ],
)

psi_cc_test(
    name = "pir_test",
    srcs = ["pir_test.cc"],
    deps = [
        ":pir",
        "//psi/utils:io",
        "@yacl//yacl/utils:scope_guard",
    ],
)
