# Copyright 2022 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//bazel:psi.bzl", "psi_cc_library", "psi_cc_test")

package(default_visibility = ["//visibility:public"])

psi_cc_library(
    name = "receiver",
    srcs = ["receiver.cc"],
    hdrs = ["receiver.h"],
    deps = [
        "@com_github_microsoft_apsi//:apsi",
    ],
)

psi_cc_library(
    name = "sender",
    srcs = ["sender.cc"],
    hdrs = ["sender.h"],
    deps = [
        "@com_github_microsoft_apsi//:apsi",
    ],
)

psi_cc_library(
    name = "test_utils",
    testonly = True,
    srcs = ["test_utils.cc"],
    hdrs = ["test_utils.h"],
    deps = [
        "@com_github_microsoft_apsi//:apsi",
        "@com_google_googletest//:gtest_main",
    ],
)

psi_cc_library(
    name = "yacl_channel",
    srcs = ["yacl_channel.cc"],
    hdrs = ["yacl_channel.h"],
    deps = [
        "@com_github_microsoft_apsi//:apsi",
        "@yacl//yacl/link",
    ],
)
