# Copyright 2023 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//bazel:psi.bzl", "psi_cc_library")

package(default_visibility = ["//visibility:public"])

psi_cc_library(
    name = "curve",
    hdrs = ["curve.h"],
)

psi_cc_library(
    name = "protocol",
    hdrs = ["protocol.h"],
    deps = [
        ":curve",
    ],
)

psi_cc_library(
    name = "psi_config",
    hdrs = ["psi.h"],
    deps = [
        ":protocol",
    ],
)

psi_cc_library(
    name = "ub_psi_config",
    hdrs = ["ub_psi.h"],
    deps = [
        ":psi_config",
    ],
)

psi_cc_library(
    name = "logging",
    hdrs = ["logging.h"],
)
