# Copyright 2023 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//bazel:psi.bzl", "psi_cc_binary", "psi_cc_library", "psi_cc_test")

package(default_visibility = ["//visibility:public"])

psi_cc_library(
    name = "kkrt_psi",
    srcs = ["kkrt_psi.cc"],
    hdrs = ["kkrt_psi.h"],
    deps = [
        "//psi/utils:communication",
        "//psi/utils:cuckoo_index",
        "//psi/utils:serialize",
        "@com_google_absl//absl/strings",
        "@yacl//yacl/crypto/hash:hash_utils",
        "@yacl//yacl/crypto/rand",
        "@yacl//yacl/kernel/algorithms:base_ot",
        "@yacl//yacl/kernel/algorithms:iknp_ote",
        "@yacl//yacl/kernel/algorithms:kkrt_ote",
        "@yacl//yacl/link",
    ],
)

psi_cc_test(
    name = "kkrt_psi_test",
    srcs = ["kkrt_psi_test.cc"],
    deps = [
        ":kkrt_psi",
        "@yacl//yacl/crypto/hash:hash_utils",
    ],
)

psi_cc_binary(
    name = "kkrt_psi_benchmark",
    srcs = ["kkrt_psi_benchmark.cc"],
    deps = [
        ":kkrt_psi",
        "@com_github_google_benchmark//:benchmark_main",
    ],
)

psi_cc_library(
    name = "common",
    srcs = ["common.cc"],
    hdrs = ["common.h"],
    deps = [
        "//psi/proto:psi_v2_cc_proto",
        "//psi/utils:bucket",
        "//psi/utils:recovery",
    ],
)

psi_cc_library(
    name = "receiver",
    srcs = ["receiver.cc"],
    hdrs = ["receiver.h"],
    deps = [
        ":common",
        ":kkrt_psi",
        "//psi:interface",
        "//psi/utils:arrow_csv_batch_provider",
    ],
)

psi_cc_library(
    name = "sender",
    srcs = ["sender.cc"],
    hdrs = ["sender.h"],
    deps = [
        ":common",
        ":kkrt_psi",
        "//psi:interface",
        "//psi/utils:arrow_csv_batch_provider",
    ],
)
